// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-jKJlTe ldyqSs"
  >
    <div
      class="sc-bdVaJa kwzqrW"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-jKJlTe ldyqSs"
  >
    <div
      class="sc-brqgnP dGPVIQ"
    >
      <div
        class="sc-jAaTju kAgzui"
      >
        Max column width:
        <input
          class="sc-jDwBTQ bSiQjL"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-bxivhb hvMtW"
  >
    <div
      class="sc-kkGfuU hjRcIU"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-bxivhb hvMtW"
  >
    <pre>
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
